[project]
name = "musubi-tuner"
version = "0.1.0"
description = "Musubi Tuner by kohya_ss"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "accelerate",
    "av",
    "bitsandbytes",
    "diffusers",
    "einops",
    "huggingface-hub",
    "opencv-python",
    "pillow",
    "safetensors",
    # "sageattention>=1.0.6",
    "toml",
    "tqdm",
    "transformers",
    "voluptuous",
    # Wan2.1
    "ftfy",
    "easydict",
]

[project.optional-dependencies]
cu124 = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
cu128 = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cu124" },
    { extra = "cu128" },
  ],
]

[dependency-groups]
dev = [
  "ascii-magic==2.3.0",
  "matplotlib==3.10.0",
  "tensorboard",
  "prompt-toolkit==3.0.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
